feat: update footer note

--- a/index.html
+++ b/index.html
@@ -137,19 +137,10 @@
     <footer>
         <p>
             This app is completely free and
-            <a href="https://github.com/alexewerlof/badge" target="_blank">open source</a>.
+            <a href="https://github.com/techlahoma/badge" target="_blank">open source</a>.
         </p>
         <p>
-            If you want to support me, you can subscribe to
-            <a href="https://blog.alexewerlof.com/subscribe" target="_blank">my newsletter</a>
-            about technical leadership, software reliability, and growth.
-            This also gives you access to my book 
-            <a href="https://blog.alexewerlof.com/p/rem" target="_blank">
-                Reliability Engineering Mindset
-            </a>
-        </p>
-        <p>
-            🇸🇪 Made in Sweden by <a href="https://alexewerlof.com/" target="_blank">Alex Ewerlöf</a>
+            Originally made by <a href="https://alexewerlof.com/" target="_blank">Alex Ewerlöf</a>
         </p>
     </footer>
     <script src="index.js"></script>
