feat: enable panning and zooming

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main>
             <label for="portrait-image-upload"><h2>1. Choose Portrait</h2></label>
             <p>
-                Choose a picture that is in square aspect ratio (example: 500x500 pixels).
+                Upload any portrait photo. Use scroll to zoom and drag to pan.
             </p>
             <p>
                 The photo will not leave your browser.
@@ -45,7 +45,7 @@
             <input type="file" id="portrait-image-upload" accept="image/*" hidden>
 
             <div id="image-preview">
-                <img title="Example of custom LinkedIn profile image" id="portrait-image" width="200" height="200" src="placeholder.jpg" alt="Example of custom LinkedIn badge created with our web app">
+                <img title="Example of custom LinkedIn profile image" id="portrait-image" src="placeholder.jpg" alt="Example of custom LinkedIn badge created with our web app">
                 <svg
                     id="overlay-svg"
                     width="200"
@@ -94,7 +94,7 @@
                                 xlink:href="#text-circle-path"
                                 startOffset="100%"
                                 style="fill: #EDF9EB"
-                                id="overlay-text-path">#CREATING</textPath>
+                                id="overlay-text-path">🦬BOARD</textPath>
                         </text>
                     </g>
                 </svg>
@@ -104,7 +104,7 @@
             <p>
                 You can use extra spaces in the end to center the text.
             </p>
-            <input type="text" id="badge-text-input" maxlength="20" value="#CREATING">
+            <input type="text" id="badge-text-input" maxlength="20" value="🦬BOARD">
 
             <p>
                 You can drag your mouse on the color selector for a live preview of the colors.
