--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                     <defs id="defs2">
                         <linearGradient id="overlay-circle-gradient">
                             <stop
-                            style="stop-color:#446E2E;stop-opacity:1;"
+                            style="stop-color:#fed602;stop-opacity:1;"
                             offset="0"
                             id="left-bottom-stop" />
                             <stop
-                            style="stop-color:#000000;stop-opacity:0;"
+                            style="stop-color:#fed602;stop-opacity:0;"
                             offset="1"
                             id="right-top-stop" />
                         </linearGradient>
@@ -92,8 +92,8 @@
                             id="overlay-text">
                             <textPath
                                 xlink:href="#text-circle-path"
-                                startOffset="100%"
-                                style="fill: #EDF9EB"
+                                startOffset="85%"
+                                style="fill: #000; text-anchor: middle; font-weight: bold;"
                                 id="overlay-text-path">🦬BOARD</textPath>
                         </text>
                     </g>
@@ -104,13 +104,13 @@
             <p>
                 You can use extra spaces in the end to center the text.
             </p>
-            <input type="text" id="badge-text-input" maxlength="20" value="🦬BOARD">
+            <input type="text" id="badge-text-input" maxlength="20" value="BOARD">
 
             <p>
                 You can drag your mouse on the color selector for a live preview of the colors.
             </p>
             <p>
-                <input type="color" id="badge-bg-color-input" value="#446E2E">
+                <input type="color" id="badge-bg-color-input" value="#fed602">
                 <label for="badge-bg-color-input">Background</label>
             </p>
             <p>
