feat: update naming and branding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Badge Creator - Create custom badges for your profile picture</title>
+    <title>Techlahoma Profile Badge Creator - Create Techlahoma badges for your profile picture</title>
     <link rel="stylesheet" href="overlay.css">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" href="example.png">
@@ -11,24 +11,24 @@
     <meta name="description" content="Enhance your LinkedIn profile with our easy-to-use web app. Personalize your profile picture with custom badges. Simple, privacy-focused, and free. Try it now!">
     <meta name="keywords" content="LinkedIn, profile badge, web app, custom badge, profile customization">
 
-    <meta property="og:url" content="https://badge.alexewerlof.com" />
+    <meta property="og:url" content="https://badge.techlahoma.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Profile Badge Creator - Create custom badges for your profile picture" />
     <meta property="og:description" content="Create a custom badge for your LinkedIn profile for free" />
-    <meta property="og:image" content="https://badge.alexewerlof.com/example.png" />
+    <meta property="og:image" content="https://badge.techlahoma.com/example.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@alexewerlof" />
+    <meta name="twitter:site" content="@techlahoma" />
     <meta name="twitter:title" content="Profile Badge Creator - Create custom badges for your profile picture" />
     <meta name="twitter:description" content="Create a custom badge for your LinkedIn profile for free" />
-    <meta name="twitter:image" content="https://badge.alexewerlof.com/example.png" />
+    <meta name="twitter:image" content="https://badge.techlahoma.com/example.png" />
 </head>
 <body>
     <div id="app">
         <header>
-            <h1>Profile Badge Creator</h1>
+            <h1>Techlahoma Badge Creator</h1>
             <p>
-                Stand out on LinkedIn with a custom badge on your profile picture.
+                Stand out on LinkedIn with a Techlahoma badge on your profile picture.
             </p>
         </header>    
         <main>
