feat: add badge presets

--- a/index.html
+++ b/index.html
@@ -94,17 +94,122 @@
                                 xlink:href="#text-circle-path"
                                 startOffset="85%"
                                 style="fill: #000; text-anchor: middle; font-weight: bold;"
-                                id="overlay-text-path">🦬BOARD</textPath>
+                                id="overlay-text-path">🦬T8A</textPath>
                         </text>
                     </g>
                 </svg>
             </div>
 
             <label for="badge-text-input"><h2>2. Configure</h2></label>
-            <p>
-                You can use extra spaces in the end to center the text.
-            </p>
-            <input type="text" id="badge-text-input" maxlength="20" value="BOARD">
+            <input type="text" id="badge-text-input" maxlength="20" value="T8A">
+
+            <div id="preset-badges">
+                <h3>Techlahoma Groups</h3>
+                <div class="badge-group">
+                    <button type="button">LUGNUTS</button>
+                    <button type="button">OSH OKC</button>
+                    <button type="button">OKC JAVA</button>
+                    <button type="button">SHECODES</button>
+                    <button type="button">OKLAHOMAI</button>
+                    <button type="button">TWD</button>
+                    <button type="button">TULSA WP</button>
+                    <button type="button">GAMEDEVS</button>
+                    <button type="button">TULSA AWS</button>
+                    <button type="button">TULSA UX</button>
+                    <button type="button">AGILE TUL</button>
+                </div>
+
+                <h3>Languages</h3>
+                <div class="badge-group">
+                    <button type="button">JS</button>
+                    <button type="button">TS</button>
+                    <button type="button">PYTHON</button>
+                    <button type="button">JAVA</button>
+                    <button type="button">C#</button>
+                    <button type="button">GO</button>
+                    <button type="button">RUST</button>
+                    <button type="button">RUBY</button>
+                    <button type="button">PHP</button>
+                    <button type="button">SQL</button>
+                    <button type="button">HTML/CSS</button>
+                    <button type="button">KOTLIN</button>
+                    <button type="button">SWIFT</button>
+                    <button type="button">ELIXIR</button>
+                </div>
+
+                <h3>Web Frameworks</h3>
+                <div class="badge-group">
+                    <button type="button">.NET</button>
+                    <button type="button">DJANGO</button>
+                    <button type="button">REACT</button>
+                    <button type="button">VUE</button>
+                    <button type="button">ANGULAR</button>
+                    <button type="button">NEXTJS</button>
+                    <button type="button">NUXT</button>
+                    <button type="button">SVELTE</button>
+                    <button type="button">HTMX</button>
+                    <button type="button">NODE</button>
+                    <button type="button">EXPRESS</button>
+                    <button type="button">FLASK</button>
+                    <button type="button">FASTAPI</button>
+                    <button type="button">RAILS</button>
+                    <button type="button">LARAVEL</button>
+                    <button type="button">SPRING</button>
+                    <button type="button">BLAZOR</button>
+                    <button type="button">EXPO</button>
+                    <button type="button">RN</button>
+                </div>
+
+                <h3>Cloud & Infra</h3>
+                <div class="badge-group">
+                    <button type="button">AWS</button>
+                    <button type="button">AZURE</button>
+                    <button type="button">GCP</button>
+                    <button type="button">DOCKER</button>
+                    <button type="button">K8S</button>
+                    <button type="button">TERRAFORM</button>
+                    <button type="button">CI/CD</button>
+                    <button type="button">GITOPS</button>
+                    <button type="button">LINUX</button>
+                </div>
+
+                <h3>Data & AI</h3>
+                <div class="badge-group">
+                    <button type="button">DATA</button>
+                    <button type="button">ANALYTICS</button>
+                    <button type="button">DBT</button>
+                    <button type="button">ML</button>
+                    <button type="button">AI</button>
+                    <button type="button">LLM</button>
+                    <button type="button">NLP</button>
+                    <button type="button">MLOPS</button>
+                </div>
+
+                <h3>Security</h3>
+                <div class="badge-group">
+                    <button type="button">SECURITY</button>
+                    <button type="button">APPSEC</button>
+                    <button type="button">DEVSECOPS</button>
+                    <button type="button">BLUETEAM</button>
+                    <button type="button">REDTEAM</button>
+                    <button type="button">GRC</button>
+                    <button type="button">CYBER</button>
+                    <button type="button">SRE</button>
+                </div>
+
+                <h3>Process</h3>
+                <div class="badge-group">
+                    <button type="button">AGILE</button>
+                    <button type="button">SCRUM</button>
+                    <button type="button">KANBAN</button>
+                    <button type="button">TDD</button>
+                    <button type="button">BDD</button>
+                    <button type="button">XP</button>
+                    <button type="button">LEAN</button>
+                    <button type="button">OKRS</button>
+                    <button type="button">UX</button>
+                </div>
+            </div>
 
             <p>
                 You can drag your mouse on the color selector for a live preview of the colors.
